# altirra

./: .gitignore  Copying.RMT  README.html  README.md  README.txt  release.cmd  release.py
assets/cursors/: target.json  targetoff.json
assets/icons/: program.json
localconfig/example/: Altirra.local.props  YASM.local.props
scripts/: dumpexports.py  hashfont.py  makefeed.py  makefeedcert.ps1  makeicon.py  statetest.py
src/: .editorconfig  ATHelpFile.sln  Altirra-DebugBuildTools.props  Altirra-DebugBuildTools.vsprops  Altirra-ReleaseBuildTools.props  Altirra-ReleaseBuildTools.vsprops  Altirra.props  Altirra.sln  AltirraRMT.sln  BUILD-HOWTO.html  CMakeCache.txt  CMakeLists.txt  DirectXSDK.props  PSA.rules  PackResource.targets  PlatformSetup.props  README.md  RawFont.props  RawFont.rules  RawFont.targets  VirtualDub-VC2005-AMD64.props  VirtualDub-VC2005-Debug.props  VirtualDub-VC2005-IX86.props  VirtualDub-VC2005-Release.props  VirtualDub-VC2005.props  VirtualDub-VC2005.vsprops  YASM.props  YASM.targets
src/ATAppBase/: ATAppBase.vcxproj  ATAppBase.vcxproj.filters
src/ATAudio/: ATAudio.vcxproj  ATAudio.vcxproj.filters
src/ATBasic/: atbasic.vcproj  atbasic.vcxproj  makefile
src/ATCPU/: ATCPU.vcxproj  ATCPU.vcxproj.filters
src/ATCompiler/: ATCompiler.vcproj  ATCompiler.vcxproj  ATCompiler.vcxproj.filters
src/ATCore/: ATCore.vcxproj  ATCore.vcxproj.filters
src/ATDebugger/: ATDebugger.vcxproj  ATDebugger.vcxproj.filters
src/ATDevices/: ATDevices.vcxproj  ATDevices.vcxproj.filters
src/ATEmulation/: ATEmulation.vcxproj  ATEmulation.vcxproj.filters
src/ATHelpBuilder/: ATHelpBuilder.vcproj  ATHelpBuilder.vcxproj  (+1 more)
src/Altirra/: Altirra.vcproj  Altirra.vcxproj  Altirra.vcxproj.filters  CMakeLists.txt  TEST2.TXT  cpuheatmap.cpp
src/Altirra/autobuild/: version.h
src/Altirra/autobuild_default/: atversionrc.h  version.h
src/Altirra/autogen/: pbidisk.inl  playsap-d-ntsc.inl  playsap-d-pal.inl
src/Altirra/h/: 1025full.h  1029full.h  1030full.h  1090.h  1400xl.h  1450xld.h  820full.h  Dialog.h  acia.h  address.h  antic.h  artifacting.h  artifacting_filters.h  asyncdownloader.h  audiofilters.h  audiomonitor.h  audiooutput.h  audiorawsource.h  audiosampleplayer.h  audiosource.h  audiosyncmixer.h  audiowriter.h  autosavemanager.h  autotest.h  aviwriter.h  bit3.h  bkptmanager.h  blackbox.h  blockdevdiskadapter.h  blockdevvirtfat32.h  browser.h  callback.h  cartridge.h  cassette.h  cassetteimage.h  cio.h  cmdhelpers.h  common_png.h  compatdb.h  compatedb.h  (+231 more)
src/Altirra/manifest/: win7.manifest
src/Altirra/res/: 1030relay.pcm  Altirra.rc  AltirraExtIcons.rc  AltirraVersion.rc  CHANGELOG.md  about.md  about.txt  altirraexticons.res  changes.txt  cmdhelp.txt  compatdb.atcpengine  dbghelp-template.html  dbghelp.txt  menu_default.txt  printer-1025-feed.pcm  printer-1029-home.pcm  printer-1029-pin.pcm  printer-1029-platen.pcm  printer-1029-retract.pcm  resource.h  romset.html  romset.md  speaker-click.pcm  target.cur  targetoff.cur
src/Altirra/source/: 1025full.cpp  1029full.cpp  1030.cpp  1030full.cpp  1090.cpp  1400xl.cpp  1450xld.cpp  820full.cpp  Dialog.cpp  about.cpp  acia.cpp  allocator.cpp  antic.cpp  artifacting.cpp  artifacting_filters.cpp  artifacting_neon.cpp  artifacting_ntsc_mmx.cpp  artifacting_ntsc_neon.cpp  artifacting_ntsc_sse2.cpp  artifacting_ntsc_sse2_intrin.cpp  artifacting_pal_mmx.cpp  artifacting_pal_scalar.cpp  artifacting_pal_sse2.cpp  artifacting_pal_sse2_intrin.cpp  artifacting_sse2_intrin.cpp  assembler.cpp  asyncdownloader_win32.cpp  audiofilters.cpp  audiomonitor.cpp  audiooutput.cpp  audiorawsource.cpp  audiosampleplayer.cpp  audiosyncmixer.cpp  audiowriter.cpp  autosavemanager.cpp  autotest.cpp  aviwriter.cpp  bit3.cpp  bkptmanager.cpp  blackbox.cpp  (+350 more)
src/Riza/: CMakeLists.txt  Riza.vcproj  Riza.vcxproj  Riza.vcxproj.filters  audioout.cpp
src/Riza/h/: displayd3d10_pixelshader.inl  displayd3d10_vertexshader.inl  displaydrv.h  displaydx9_shader.inl  stdafx.h
src/Riza/res/: Riza.rc  resource.h
src/Riza/source/: audioout.cpp  audiooutwasapi.cpp  bitmap.cpp  cap_dshow.cpp  cap_vfw.cpp  capaudiocomp.cpp  capreplay.cpp  direct3d.cpp  display.cpp  displayd3d10.fx  displayd3d101.cpp  displayd3dfx.cpp  displayddraw.cpp  displaydrv.cpp  displaydx9.cpp  displaydx9_ps1.fxh  displaydx9_ps14.fxh  displaydx9_ps2.fxh  displaygdi.cpp  displaygl.cpp  opengl.cpp  stdafx.cpp  stddefs.fxh  w32audiocodec.cpp  w32videocodec.cpp  w32videocodecpack.cpp
(+992 files in other folders)
