cmake_minimum_required (VERSION 2.6)
project (Altirra)

set(CMAKE_CXX_FLAGS "-msse3 -D_WIN32_WINNT=0x0600 -DWINVER=0x0600 -D_WIN32_IE=0x0600 -DUNICODE -D_UNICODE")

include_directories(
	h
	../h
	res
	../../obj/Debug/hlekernel
	c:/dx9sdk3/include
	autobuild_default
)

add_executable(Altirra
	source/about.cpp
	source/antic.cpp
	source/artifacting.cpp
	source/artifacting_ntsc_mmx.cpp
	source/artifacting_ntsc_sse2.cpp
	source/artifacting_pal_mmx.cpp
	source/artifacting_pal_scalar.cpp
	source/artifacting_pal_sse2_intrin.cpp
	source/assembler.cpp
	source/audiofilters.cpp
	source/audiomonitor.cpp
	source/audiooutput.cpp
	source/audiowriter.cpp
	source/autotest.cpp
	source/aviwriter.cpp
	source/bkptmanager.cpp
	source/cartridge.cpp
	source/cassette.cpp
	source/cassetteimage.cpp
	source/cheatengine.cpp
	source/common_png.cpp
	source/console.cpp
	source/covox.cpp
	source/cpu.cpp
	source/cpu6502.cpp
	source/cpu6502ill.cpp
	source/cpu65c02.cpp
	source/cpu65c816.cpp
	source/cpuhookmanager.cpp
	source/debugdisplay.cpp
	source/debugger.cpp
	source/debuggerexp.cpp
	source/debuggerlog.cpp
	source/decmath.cpp
	source/Dialog.cpp
	source/disasm.cpp
	source/disk.cpp
	source/diskfs.cpp
	source/diskfsarc.cpp
	source/diskfsdos2.cpp
	source/diskfssdx2.cpp
	source/diskimage.cpp
	source/encode_png.cpp
	source/flash.cpp
	source/gtia.cpp
	source/gtiarenderer.cpp
	source/gtiatables.cpp
	source/harddisk.cpp
	source/hleciohook.cpp
	source/hlefastboothook.cpp
	source/hlefpaccelerator.cpp
	source/hlekernel.cpp
	source/hleprogramloader.cpp
	source/hleutils.cpp
	source/ide.cpp
	source/idephysdisk.cpp
	source/inputcontroller.cpp
	source/inputmanager.cpp
	source/joystick.cpp
	source/kmkjzide.cpp
	source/main.cpp
	source/memorymanager.cpp
	source/mmu.cpp
	source/modem.cpp
	source/modemtcp.cpp
	source/myide.cpp
	source/options.cpp
	source/oshelper.cpp
	source/pbi.cpp
	source/pclink.cpp
	source/pclink_win32.cpp
	source/pokey.cpp
	source/pokeyrenderer.cpp
	source/pokeytables.cpp
	source/printer.cpp
	source/profiler.cpp
	source/profilerui.cpp
	source/rs232.cpp
	source/rtcds1305.cpp
	source/rtcv3021.cpp
	source/rtime8.cpp
	source/savestate.cpp
	source/scheduler.cpp
	source/side.cpp
	source/simeventmanager.cpp
	source/simulator.cpp
	source/sio.cpp
	source/siomanager.cpp
	source/slightsid.cpp
	source/soundboard.cpp
	source/stdafx.cpp
	source/symbols.cpp
	source/textdom.cpp
	source/texteditor.cpp
	source/ui.cpp
	source/uiabout.cpp
	source/uiaudiooptions.cpp
	source/uicaptionupdater.cpp
	source/uicartmapper.cpp
	source/uicheater.cpp
	source/uicolors.cpp
	source/uicpuoptions.cpp
	source/uidebugfont.cpp
	source/uidisk.cpp
	source/uidiskexplorer.cpp
	source/uidragdrop.cpp
	source/uiemuerror.cpp
	source/uienhancedtext.cpp
	source/uiexceptionfilter.cpp
	source/uifileassoc.cpp
	source/uiframe.cpp
	source/uiharddisk.cpp
	source/uiinput.cpp
	source/uiinputrebind.cpp
	source/uikeyboard.cpp
	source/uikeyboardoptions.cpp
	source/uilightpen.cpp
	source/uimrulist.cpp
	source/uioptions.cpp
	source/uipclink.cpp
	source/uiphysdisk.cpp
	source/uiportmenus.cpp
	source/uiprogress.cpp
	source/uiproxies.cpp
	source/uiregistry.cpp
	source/uirender.cpp
	source/uiromimages.cpp
	source/uiserialports.cpp
	source/uitapecontrol.cpp
	source/uiverifier.cpp
	source/vbxe.cpp
	source/verifier.cpp
	source/videowriter.cpp
)

target_link_libraries(Altirra system Dita Riza Kasumi libwsock32.a libws2_32.a libshlwapi.a libcomctl32.a libwinmm.a libmsimg32.a)
